# SkySimulation

./: .gitignore  Fully_connected_NN.ipynb  LICENSE  MC_covariance.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
CMBFeatureNet/: __init__.py
Notebooks/: FeaturePk_CAMB_vs_anafast.ipynb  Loss_info_Cls-maps.ipynb  Loss_info_Nside128.ipynb  Loss_info_Nside218.ipynb  MC_covariance.ipynb  Primordial_Feature_data_errors.ipynb  Scalability.ipynb  Signal_Cls_maps_Cl.ipynb  Symmetrized_vs_MCMC_CovMat_tests.ipynb
SandBox/: Recoverable_signal_polarization.ipynb  Recoverable_signal_temp.ipynb  Test_recoverable_signal.ipynb  Warmup.ipynb
Simulated_maps/: PPS_data_tests.ipynb
Simulated_maps/simulated_data/: ttcls_camb_noisy.csv
examples/: CMB_plots_nside.py  generate_cmb_maps.py  generate_cmb_maps_full.py
functions/: __init__.py  simulate_data.py
plots/: CMB_plots_nside.py
simulated_maps/: LCDM_data_errors.ipynb  MC_covariance.ipynb  PPS_data_tests.ipynb  Polarizatio_maps.ipynb  Power_Spectrum_data_errors.ipynb  Primordial_Feature_data_errors.ipynb  Symmetrized_vs_MCMC_CovMat_tests.ipynb
simulated_maps/simulated_data/: eecls_camb_noisy.csv  tecls_camb_noisy.csv  ttcls_camb_noisy.csv
src/skysimulation/: __init__.py  camb.py  covariance.py  io.py  maps.py  pk.py
tests/: Angular_PS_simulation.py  generate_cmb_maps.py  generate_cmb_maps_Nside128.py
