[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skysimulation"
version = "0.1.0"
description = "SkySimulation: tools for CMB spectra and map simulation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "healpy",
  "camb",
  "astropy",
  ""matplotlib
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
